Fix some images and cleanup UI

--- a/client/src/Pages/Home.sass
+++ b/client/src/Pages/Home.sass
@@ -32,3 +32,17 @@ body
 .footer-legal
   font-size: var(--font-size--micro)
   line-height: 1.2
+
+.page-header
+  display: grid
+  gap: 20px
+  grid-template-columns: 120px auto 200px
+
+.header-nav
+  text-align: right
+  ul
+    list-style: none
+    padding: 0
+    margin: 0
+  li
+    display: inline-block
