--- a/client/src/UI/Layout/Template.sass
+++ b/client/src/UI/Layout/Template.sass
@@ -8,7 +8,7 @@ body
 .page-header,
 .page-content,
 .page-footer
-  padding: 10px
+  padding: 10px var(--safearea-margin)
 
 .page-header
   grid-row: 1 / 2
