--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -12,6 +12,7 @@ body
   --font-size--default: 16px
   --font-size--small: 14px
   --font-size--micro: 12px
+  --safearea-margin: 16px
 
 body
   background: var(--color-bg)
