--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -17,3 +17,4 @@ body
 body
   background: var(--color-bg)
   color: var(--color-text)
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"
