--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -96,17 +96,20 @@
 .fltrhead
   display: flex
   align-items: baseline
+  margin: 20px 0 10px
   &-name
     margin: 0
     flex: 0 0 auto
+  &-action
+    cursor: pointer
+    color: var(--color-redmedium)
+    text-decoration: underline
   &-primary
     margin-left: 10px
     flex: 1 0 auto
-    cursor: pointer
   &-secondary
     margin: 0
     flex: 0 0 auto
-    cursor: pointer
 
 .quantpick
   display: inline-block
