--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -104,6 +104,7 @@
     cursor: pointer
     color: var(--color-redmedium)
     text-decoration: underline
+    user-select: none
   &-primary
     margin-left: 10px
     flex: 1 0 auto
