--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -80,11 +80,13 @@
     margin-left: 10px
     width: $size
     height: $size
-  &-rowpiece_disciplines
+  &-rowpiece_disciplines,
+  &-rowpiece_types
     display: inline-block
     width: 60px
     margin-left: 5px
-  &-rowpiece_discipline
+  &-rowpiece_discipline,
+  &-rowpiece_type
     $size: 18px
     display: inline-block
     margin-left: 3px
