--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -17,6 +17,7 @@
     grid-row: 3 / 4
 
   @media screen and ( min-width: $breakpoint-ipad--horizontal)
+    gap: 20px
     grid-template-columns: repeat(2, 1fr)
     &-actions
       grid-column: 1 / 3
@@ -141,3 +142,91 @@
 
     input
       display: none
+
+.decklist
+  display: grid
+  gap: 0
+  grid-template-columns: repeat(2, 1fr)
+  grid-template-rows: repeat(5 , auto)
+
+  &-title
+    grid-column: 1 / 3
+    grid-row: 1 / 2
+    margin: 0
+  &-meta
+    grid-column: 1 / 3
+    grid-row: 2 / 3
+  &-agenda
+    grid-column: 1 / 3
+    grid-row: 3 / 4
+    &_image
+      display: none
+  &-haven
+    grid-column: 1 / 3
+    grid-row: 4 / 5
+    &_image
+      display: none
+  &-faction
+    grid-column: 1 / 3
+    grid-row: 5 / 6
+  &-library
+    grid-column: 1 / 3
+    grid-row: 6 / 7
+  @media screen and ( min-width: $breakpoint-ipad--horizontal)
+    gap: 0 10px
+    &-meta
+      grid-column: 1 / 3
+      grid-row: 2 / 3
+    &-agenda
+      grid-column: 1 / 2
+      grid-row: 3 / 4
+      &_name
+        display: none
+      &_image
+        display: block
+    &-haven
+      grid-column: 1 / 2
+      grid-row: 4 / 5
+      &_name
+        display: none
+      &_image
+        display: block
+    &-faction
+      grid-column: 2 / 3
+      grid-row: 3 / 4
+    &-library
+      grid-column: 2 / 3
+      grid-row: 4 / 5
+
+  &-byline
+    font-size: 14px
+    line-height: 1
+  &-section_header
+    margin: 0
+  &-clan_entry
+    display: inline-block
+    margin-left: 10px
+  &-clan_clan
+    $size: 18px
+    width: $size
+    height: $size
+    display: inline-block
+
+.deckfact
+  &-clan,
+  &-bp,
+  &-name,
+  &-leader
+    display: inline-block
+  &-clan
+    $size: 18px
+    width: $size
+    height: $size
+  &-bp
+    width: 10px
+    margin-left: 5px
+    text-align: center
+  &-name
+    margin-left: 5px
+  &-leader
+    margin-left: 5px
