--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -18,3 +18,9 @@ body
   background: var(--color-bg)
   color: var(--color-text)
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"
+
+ul,ol
+  margin: 0
+  padding: 0
+li
+  list-style: none
