--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -145,38 +145,22 @@
 
 .decklist
   display: grid
-  gap: 0
-  grid-template-columns: repeat(2, 1fr)
-  grid-template-rows: repeat(5 , auto)
+  gap: 0 10px
+  grid-template-columns: repeat(3, 1fr)
 
-  &-title
-    grid-column: 1 / 3
-    grid-row: 1 / 2
-    margin: 0
-  &-meta
-    grid-column: 1 / 3
-    grid-row: 2 / 3
-  &-agenda
-    grid-column: 1 / 3
-    grid-row: 3 / 4
+  &-title,
+  &-byline
+    grid-column: 1 / 4
+  &-agenda,
+  &-haven,
+  &-leader
+    grid-column: 1 / 4
     &_image
       display: none
-  &-haven
-    grid-column: 1 / 3
-    grid-row: 4 / 5
-    &_image
-      display: none
-  &-faction
-    grid-column: 1 / 3
-    grid-row: 5 / 6
+  &-faction,
   &-library
-    grid-column: 1 / 3
-    grid-row: 6 / 7
+    grid-column: 1 / 4
   @media screen and ( min-width: $breakpoint-ipad--horizontal)
-    gap: 0 10px
-    &-meta
-      grid-column: 1 / 3
-      grid-row: 2 / 3
     &-agenda
       grid-column: 1 / 2
       grid-row: 3 / 4
