--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -17,7 +17,7 @@
     grid-row: 3 / 4
 
   @media screen and ( min-width: $breakpoint-ipad--horizontal)
-    gap: 20px
+    gap: 20px 30px
     grid-template-columns: repeat(2, 1fr)
     &-actions
       grid-column: 1 / 3
@@ -99,7 +99,7 @@
 .fltrhead
   display: flex
   align-items: baseline
-  margin: 20px 0 10px
+  margin: 0 0 10px
   &-name
     margin: 0
     flex: 0 0 auto
@@ -146,47 +146,51 @@
 .decklist
   display: grid
   gap: 0 10px
-  grid-template-columns: repeat(3, 1fr)
+  grid-template-columns: repeat(6, 1fr)
 
   &-title,
   &-byline
-    grid-column: 1 / 4
-  &-agenda,
-  &-haven,
-  &-leader
-    grid-column: 1 / 4
+    grid-column: 1 / 7
+  &-core
+    grid-column: 1 / 7
     &_image
       display: none
   &-faction,
   &-library
-    grid-column: 1 / 4
+    grid-column: 1 / 7
   @media screen and ( min-width: $breakpoint-ipad--horizontal)
-    &-agenda
-      grid-column: 1 / 2
-      grid-row: 3 / 4
-      &_name
-        display: none
+    &-core
       &_image
         display: block
-    &-haven
-      grid-column: 1 / 2
-      grid-row: 4 / 5
-      &_name
+      .decklist-section_header
         display: none
-      &_image
-        display: block
-    &-faction
-      grid-column: 2 / 3
-      grid-row: 3 / 4
+
+      &--agenda,
+      &--haven,
+      &--leader
+        grid-row: 3 / 4
+
+      &--leader
+        grid-column: 1 / 3
+      &--agenda
+        grid-column: 3 / 5
+      &--haven
+        grid-column: 5 / 7
+
+    &-faction,
     &-library
-      grid-column: 2 / 3
       grid-row: 4 / 5
+    &-faction
+      grid-column: 1 / 4
+    &-library
+      grid-column: 4 / 7
 
   &-byline
     font-size: 14px
     line-height: 1
+    margin-bottom: 20px
   &-section_header
-    margin: 0
+    margin: 0 0 10px
   &-clan_entry
     display: inline-block
     margin-left: 10px
@@ -197,20 +201,31 @@
     display: inline-block
 
 .deckfact
+  &-entry
+    line-height: 20px
+    margin-top: 5px
+    display: flex
+    align-items: center
+    &:first-child
+      margin-top: 0
+    &--leader
+      font-weight: bold
   &-clan,
   &-bp,
-  &-name,
-  &-leader
+  &-name
     display: inline-block
+  &-bp
+    width: 10px
+    text-align: center
   &-clan
     $size: 18px
     width: $size
     height: $size
-  &-bp
-    width: 10px
     margin-left: 5px
-    text-align: center
   &-name
     margin-left: 5px
-  &-leader
-    margin-left: 5px
+  &-discipline
+    $size: 18px
+    margin-left: 3px
+    width: $size
+    height: $size
