--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -19,7 +19,7 @@ body
   color: var(--color-text)
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"
 
-ul,ol
+ul,ol,h1,h2,h3,h4,h5,h6
   margin: 0
   padding: 0
 li
