--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -180,6 +180,7 @@
     &-faction,
     &-library
       grid-row: 4 / 5
+      margin-top: 20px
     &-faction
       grid-column: 1 / 4
     &-library
@@ -229,3 +230,15 @@
     margin-left: 3px
     width: $size
     height: $size
+
+.decklist-library
+  &_section_header
+    margin-top: 10px
+    &:first-child
+      margin-top: 0
+
+  &_entry
+    line-height: 20px
+    margin-top: 5px
+    display: flex
+    align-items: center
