--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -1,10 +1,12 @@
 @import ../_vars
 
+$actions-bar-height: 50px
+
 .deckbldr
   display: grid
   gap: 10px
   grid-template-columns: repeat(1, 1fr)
-  grid-template-rows: 50px auto auto
+  grid-template-rows: $actions-bar-height auto auto
 
   &-actions
     grid-column: 1 / 2
@@ -17,7 +19,7 @@
     grid-row: 3 / 4
 
   @media screen and ( min-width: $breakpoint-ipad--horizontal)
-    gap: 20px 30px
+    gap: 0 30px
     grid-template-columns: repeat(2, 1fr)
     &-actions
       grid-column: 1 / 3
@@ -95,6 +97,21 @@
     height: $size
     &:first-child
       margin-left: 0
+
+@media screen and ( min-width: $breakpoint-ipad--horizontal)
+  .deckbldr,
+  .deckbldr-actions
+    position: sticky
+    top: 0
+  .deckbldr-actions
+    background: #EEE
+    z-index: 1
+    margin: 0 ($safearea-margin * -1)
+    padding: 0 $safearea-margin
+
+  .deckbldr-decklist
+    position: sticky
+    top: $actions-bar-height
 
 .fltrhead
   display: flex
