--- a/client/src/UI/Layout/Template.sass
+++ b/client/src/UI/Layout/Template.sass
@@ -1,3 +1,6 @@
+
+@import ../../_vars
+
 body
   align-content: stretch
   display: grid
@@ -5,21 +8,19 @@ body
   justify-content: stretch
   min-height: 100vh
 
-.page-header,
-.page-content,
-.page-footer
-  padding: 10px var(--safearea-margin)
-
 .page-header
   grid-row: 1 / 2
   background: var(--color-greylight)
+  padding: 10px $safearea-margin
 
 .page-content
   grid-row: 2 / 3
+  padding: 0 $safearea-margin
 
 .page-footer
   grid-row: 3 / 4
   background: var(--color-greydeep)
+  padding: 10px $safearea-margin
 
 .footer-legal
   font-size: var(--font-size--micro)
