--- a/client/src/UI/Card.sass
+++ b/client/src/UI/Card.sass
@@ -1,7 +1,7 @@
 @use "sass:math"
 
 .cardimage
-  $cardHeight: 419px
+  $cardHeight: 418px
   $cardWidth: 300px
   $aspectRatio: math.div($cardHeight, $cardWidth) * 100%
 
@@ -23,6 +23,5 @@
 
   img
     border-radius: 4.33%/3.1%
-    max-width: 100%
-    max-height: 100%
     height: auto
+    object-fit: contain
