--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -210,6 +210,8 @@ $actions-bar-height: 50px
     margin-bottom: 20px
   &-section_header
     margin: 0 0 10px
+    &--invalid
+      color: var(--color-redlight)
   &-clan_entry
     display: inline-block
     margin-left: 10px
