--- a/client/src/_vars.sass
+++ b/client/src/_vars.sass
@@ -1,4 +1,5 @@
 $breakpoint-ipad--vertical: 768px
 $breakpoint-ipad--horizontal: 1024px
+$breakpoint-largest-widht: 1900px
 
 $safearea-margin: 16px
