--- a/client/src/_vars.sass
+++ b/client/src/_vars.sass
@@ -3,3 +3,8 @@ $breakpoint-ipad--horizontal: 1024px
 $breakpoint-largest-widht: 1900px
 
 $safearea-margin: 16px
+
+$round-border: 3px
+
+$z-modal-wrapper:1
+$z-modal-content:2
