--- a/client/src/UI/Layout/Modal.sass
+++ b/client/src/UI/Layout/Modal.sass
@@ -1,3 +1,5 @@
+@import ../../_vars
+
 .modal
   position: absolute
   top: 0
@@ -14,12 +16,38 @@
     bottom: 0
     right: 0
     background: rgba(0,0,0,.4)
+    z-index: $z-modal-wrapper
 
   &-content
     background: #FFF
-    width: 50%
-    height: 120px
-    box-shadow: 0 0 10px #000
-    border-radius: 3px
-    padding: 10px
-    z-index: 1
+    width: 80vw
+    box-shadow: 0 0 12px rgba(0,0,0,.6)
+    border-radius: $round-border
+    padding: 16px
+    z-index: $z-modal-content
+    position: relative
+    max-width: 300px
+
+  &-header
+    margin: 0
+    font-size: 20px
+    font-weight: bold
+
+  &-close
+    margin: 0
+    font-size: 14px
+    position: absolute
+    top:10px
+    right: 10px
+    text-align: right
+    cursor: pointer
+    color: var(--color-redmedium)
+
+  &-form
+    margin-top: 20px
+    input
+      width: 230px
+
+  &-submit
+    margin-top: 20px
+    text-align: center
