--- a/client/src/UI/Layout/Header.sass
+++ b/client/src/UI/Layout/Header.sass
@@ -4,10 +4,21 @@
   display: flex
 
   &-logo
-    width: 120px
     flex: 0 1 auto
-    svg
-      width: 100%
+    width: 20px
+    span
+      visibility: hidden
+    a
+      width:100%
+      height: 100%
+      background-image: url("/assets/logo/rivalsdb-ico.svg")
+      background-size: contain
+      display: block
+      overflow: hidden
+    @media screen and ( min-width: $breakpoint-ipad--vertical)
+      width: 83px
+      a
+        background-image: url("/assets/logo/rivalsdb-logo.svg")
 
   &-search
     display: none
