--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -1,6 +1,6 @@
 @import ../_vars
 
-$actions-bar-height: 50px
+$actions-bar-height: 60px
 
 .deckbldr
   display: grid
@@ -129,6 +129,25 @@ $actions-bar-height: 50px
   .deckbldr-decklist
     position: sticky
     top: $actions-bar-height
+
+.deckbldr
+  &-actions
+    text-align: center
+    padding-top: 5px
+
+.actions
+  &-item
+    display: inline-block
+    cursor: pointer
+    span
+      display: block
+      &.material-icons
+        font-size: 30px
+    &--inactive
+      color: #999
+  &-description
+    font-size: 14px
+
 
 .fltrhead
   display: flex
