Wolf and Rat cards

--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -16,8 +16,14 @@
   &_brujah
     background-image: url("../../assets/icons/clan-brujah.svg")
 
+  &_gangrel
+    background-image: url("../../assets/icons/clan-gangrel.svg")
+
   &_malkavian
     background-image: url("../../assets/icons/clan-malkavian.svg")
+
+  &_nosferatu
+    background-image: url("../../assets/icons/clan-nosferatu.svg")
 
   &_toreador
     background-image: url("../../assets/icons/clan-toreador.svg")
