--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -67,6 +67,24 @@
   &_agenda
     background-image: url("../../assets/icons/icon-agenda.svg")
 
+  &_agenda_card
+    background-image: url("../../assets/icons/icon-crown.svg")
+
+  &_faction
+    background-image: url("../../assets/icons/icon-faction.svg")
+
+  &_action
+    background-image: url("../../assets/icons/icon-action.svg")
+
+  &_unhosted_action
+    background-image: url("../../assets/icons/icon-unhosted-action.svg")
+
+  &_haven
+    background-image: url("../../assets/icons/icon-haven.svg")
+
+  &_library
+    background-image: url("../../assets/icons/icon-library.svg")
+
   &_blood
     background-image: url("../../assets/icons/icon-blood.svg")
 
