--- a/client/src/UI/FilterSelection.sass
+++ b/client/src/UI/FilterSelection.sass
@@ -26,3 +26,7 @@
     align-items: center
     font-size: 24px
     line-height: 1
+  &-icon_wrapper
+    height: 100%
+    width: 100%
+    display: inline-block
