Fix faction heading

--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -244,8 +244,12 @@ $actions-bar-height: 60px
 
   &-section_header
     margin: 0 0 10px
+    display: flex
     &--invalid
       color: var(--color-redlight)
+  &-section_header_extra
+    display: flex
+
   &-clan_entry
     display: inline-block
     margin-left: 10px
