Icon Refactor part 2

--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -145,10 +145,11 @@ $actions-bar-height: 60px
     cursor: pointer
     span
       display: block
-      &.material-icons
-        font-size: 30px
     &--inactive
       color: #999
+  &-icon
+    display: block
+    height: 30px
   &-description
     font-size: 14px
 
