--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -1,24 +1,26 @@
 .ui-icon
   width: 100%
   height: 100%
-  background-size: contain
-  background-position: center center
-  background-repeat: no-repeat
+  mask-size: contain
+  mask-position: center center
+  mask-repeat: no-repeat
   display: inline-block
+  &--standard
+    background-color: var(--color-icon-standard)
   span
     visibility: hidden
 
 $clan_icons: brujah gangrel malkavian nosferatu thinblood toreador tremere ventrue
 @each $icon in $clan_icons
   .ui-icon_#{$icon}
-    background-image: url("../../assets/icons/clan-#{$icon}.svg")
+    mask-image: url("../../assets/icons/clan-#{$icon}.svg")
 
 $discipline_icons: animalism auspex blood_sorcery celerity dominate fortitude obsfuscate potence presence protean thin_blood_alchemy
 @each $icon in $discipline_icons
   .ui-icon_#{$icon}
-    background-image: url("../../assets/icons/discipline-#{$icon}.svg")
+    mask-image: url("../../assets/icons/discipline-#{$icon}.svg")
 
-$other_icons: action agenda attack blood bloodpotency bloodpotencyrequirement crown damage faction haven influence influence_modifier leader library mental physical ranged reaction shield social unhosted_action
+$other_icons: action agenda attack blood bloodpotency bloodpotencyrequirement crown damage faction haven influence influence_modifier leader library mental physical ranged reaction save shield social unhosted_action
 @each $icon in $other_icons
   .ui-icon_#{$icon}
-    background-image: url("../../assets/icons/icon-#{$icon}.svg")
+    mask-image: url("../../assets/icons/icon-#{$icon}.svg")
