--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -8,6 +8,8 @@ body
   --color-redlight: #D92414
   --color-redmedium: #8C1E14
   --color-reddeep: #591711
+
+  --color-icon-standard: #000
   --font-size--header: 20px
   --font-size--default: 16px
   --font-size--small: 14px
