--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -20,7 +20,7 @@ $discipline_icons: animalism auspex blood_sorcery celerity dominate fortitude ob
   .ui-icon_#{$icon}
     mask-image: url("../../assets/icons/discipline-#{$icon}.svg")
 
-$other_icons: action agenda attack blood bloodpotency bloodpotencyrequirement crown damage faction haven influence influence_modifier leader library mental physical ranged reaction save shield social unhosted_action
+$other_icons: action agenda alchemy attack blood bloodpotency bloodpotencyrequirement conspiracy crown damage faction haven influence influence_modifier leader library mental ongoing physical ranged reaction ritual save scheme shield social special title unhosted_action
 @each $icon in $other_icons
   .ui-icon_#{$icon}
     mask-image: url("../../assets/icons/icon-#{$icon}.svg")
