--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -1,6 +1,9 @@
 .ui-icon
   width: 100%
   height: 100%
+  -webkit-mask-size: contain
+  -webkit-mask-position: center center
+  -webkit-mask-repeat: no-repeat
   mask-size: contain
   mask-position: center center
   mask-repeat: no-repeat
@@ -13,14 +16,17 @@
 $clan_icons: brujah gangrel malkavian nosferatu thinblood toreador tremere ventrue
 @each $icon in $clan_icons
   .ui-icon_#{$icon}
+    -webkit-mask-image: url("../../assets/icons/clan-#{$icon}.svg")
     mask-image: url("../../assets/icons/clan-#{$icon}.svg")
 
 $discipline_icons: animalism auspex blood_sorcery celerity dominate fortitude obsfuscate potence presence protean thin_blood_alchemy
 @each $icon in $discipline_icons
   .ui-icon_#{$icon}
+    -webkit-mask-image: url("../../assets/icons/discipline-#{$icon}.svg")
     mask-image: url("../../assets/icons/discipline-#{$icon}.svg")
 
 $other_icons: action agenda alchemy attack blood bloodpotency bloodpotencyrequirement conspiracy crown damage faction haven influence influence_modifier leader library mental ongoing physical ranged reaction ritual save scheme shield social special title unhosted_action
 @each $icon in $other_icons
   .ui-icon_#{$icon}
+    -webkit-mask-image: url("../../assets/icons/icon-#{$icon}.svg")
     mask-image: url("../../assets/icons/icon-#{$icon}.svg")
