Ugliest deck index ever

--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -1,6 +1,7 @@
 @import ./base.sass
 @import ./Pages/About.sass
 @import ./Pages/Build.sass
+@import ./Pages/Decks.sass
 @import ./Pages/Search.sass
 @import ./UI/Attribute.sass
 @import ./UI/Card.sass
