overlay card image on card name

--- a/client/src/_vars.sass
+++ b/client/src/_vars.sass
@@ -6,5 +6,6 @@ $safearea-margin: 16px
 
 $round-border: 3px
 
-$z-modal-wrapper:1
-$z-modal-content:2
+$z-card-name-image: 10
+$z-modal-wrapper: 20
+$z-modal-content: 30
