--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -5,6 +5,7 @@
 @import ./Pages/Search.sass
 @import ./UI/Attribute.sass
 @import ./UI/Card.sass
+@import ./UI/CardName.sass
 @import ./UI/Decklist.sass
 @import ./UI/FilterSelection.sass
 @import ./UI/Icon.sass
