--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -2,6 +2,7 @@
 @import ./Pages/About.sass
 @import ./Pages/Build.sass
 @import ./Pages/Decks.sass
+@import ./Pages/Profile.sass
 @import ./Pages/Search.sass
 @import ./UI/Attribute.sass
 @import ./UI/Card.sass
