--- a/client/src/Pages/Search.sass
+++ b/client/src/Pages/Search.sass
@@ -3,6 +3,7 @@
     display: flex
     flex-wrap: wrap
     max-width: 840px
+    overflow: hidden
 
   &-flaggroup
     flex: 0 0 max-content
@@ -10,23 +11,21 @@
   &-text
     margin-top: 10px
 
-  &-results
-    margin: 0
-    padding: 0
-    display: grid
-    gap: 0 15px
-    place-items: start center
+.search-results
+  display: grid
+  gap: 12px 16px
+  place-items: start center
+  grid-template-columns: repeat(1, 1fr)
+  @media screen and ( min-width: 516px)
     grid-template-columns: repeat(2, 1fr)
-    @media screen and ( min-width: 710px)
-      grid-template-columns: repeat(3, 1fr)
-    @media screen and ( min-width: 945px)
-      grid-template-columns: repeat(4, 1fr)
-    @media screen and ( min-width: 1200px)
-      grid-template-columns: repeat(5, 1fr)
-    @media screen and ( min-width: 1600px)
-      grid-template-columns: repeat(6, 1fr)
+  @media screen and ( min-width: 710px)
+    grid-template-columns: repeat(3, 1fr)
+  @media screen and ( min-width: 945px)
+    grid-template-columns: repeat(4, 1fr)
+  @media screen and ( min-width: 1200px)
+    grid-template-columns: repeat(5, 1fr)
+  @media screen and ( min-width: 1600px)
+    grid-template-columns: repeat(6, 1fr)
 
-  &-result
-    list-style: none
-    cursor: pointer
-    margin: 20px 0
+.search-result
+  cursor: pointer
