--- a/client/src/UI/Layout/Header.sass
+++ b/client/src/UI/Layout/Header.sass
@@ -11,14 +11,24 @@
     a
       width: 100%
       height: 100%
-      background-image: url("../../assets/logo/rivalsdb-ico.svg")
-      background-size: contain
       display: block
       overflow: hidden
+
+      background-color: var(--color-header-logo)
+      -webkit-mask-size: contain
+      -webkit-mask-position: center center
+      -webkit-mask-repeat: no-repeat
+      -webkit-mask-image: url("../../assets/logo/rivalsdb-ico.svg")
+      mask-size: contain
+      mask-position: center center
+      mask-repeat: no-repeat
+      mask-image: url("../../assets/logo/rivalsdb-ico.svg")
+
     @media screen and ( min-width: $breakpoint-ipad--vertical)
       width: 83px
       a
-        background-image: url("../../assets/logo/rivalsdb-logo.svg")
+        -webkit-mask-image: url("../../assets/logo/rivalsdb-logo.svg")
+        mask-image: url("../../assets/logo/rivalsdb-logo.svg")
 
   &-search
     display: none
