--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -8,6 +8,8 @@
   mask-position: center center
   mask-repeat: no-repeat
   display: inline-block
+  &--negative
+    background-color: var(--color-icon-negative)
   &--standard
     background-color: var(--color-icon-standard)
   span
