--- a/client/src/_vars.sass
+++ b/client/src/_vars.sass
@@ -1,11 +1,14 @@
 $breakpoint-ipad--vertical: 768px
 $breakpoint-ipad--horizontal: 1024px
-$breakpoint-largest-widht: 1900px
+$breakpoint-largest-width: 1700px
 
 $safearea-margin: 16px
 
 $round-border: 3px
 
+$z-deckindex-illustration: 1
+$z-deckindex-illustration-overlay: 2
+$z-deckindex-content: 3
 $z-card-name-image: 10
 $z-modal-wrapper: 20
 $z-modal-content: 30
