--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -1,5 +1,3 @@
-@import ../node_modules/normalize.css/normalize.css
-
 body
   --color-icon-standard: #000
   --font-size--header: 20px
@@ -7,6 +5,7 @@ body
   --font-size--small: 14px
   --font-size--micro: 12px
 
+  --color-icon-negative: #FFF
   --color-bg-farthest: rgba(15, 27, 38, 1)
   --color-bg-far: rgba(28, 51, 71, 1)
   --color-bg-close: rgba(38, 70, 97, 1)
@@ -20,6 +19,9 @@ body
   background: var(--color-bg-far)
   color: var(--color-copy-medium)
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"
+  font-size: 15px
+  line-height: 24px
+  margin: 0
 
 a
   color: var(--color-link)
