--- a/client/src/Pages/Decks.sass
+++ b/client/src/Pages/Decks.sass
@@ -1,26 +1,72 @@
-.deckindexitem
-  padding: 10px 0
-  border-top: 1px solid #CCC
-  &:first-child
-    border-top: none
+@import ../_vars
 
-.brb
-  display: flex
-  flex-wrap: wrap
-  &-block
-    margin-left: 15px
+.deckindex
+  margin: 20px 0
+  display: grid
+  grid-template-columns: repeat(1, 1fr)
+  gap: 16px
+
+@media screen and ( min-width: $breakpoint-ipad--vertical)
+  .deckindex
+    grid-template-columns: repeat(2, 1fr)
+@media screen and ( min-width: $breakpoint-ipad--horizontal)
+  .deckindex
+    grid-template-columns: repeat(3, 1fr)
+@media screen and ( min-width: $breakpoint-largest-width)
+  .deckindex
+    grid-template-columns: repeat(4, 1fr)
+
+.deckindexcard
+  background: #000
+  width: 100%
+  height: 132px
+  display: block
+  text-decoration: none
+  overflow: hidden
+  position: relative
+  &__illustration
+    opacity: 0.5
+    position: absolute
+    transform: translate3d(-25px, -35px, 0) scale(1.4,1.4)
+    z-index: $z-deckindex-illustration
+  &__illustration-overlay
+    display: block
+    width: 100%
+    height: 100%
+    position: absolute
+    z-index: $z-deckindex-illustration-overlay
+    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 80%, rgba(0,0,0,1) 90%, rgba(0,0,0,1) 100%)
+  &__content
+    z-index: $z-deckindex-content
+    position: absolute
+    top: 6px
+    left: 6px
+    right: 6px
+    bottom: 6px
+  &__name
+    font-size: 18px
+    line-height: 24px
+    color: #FFF
+  &__byline
+    font-size: 15px
+    line-height: 24px
+    color: #FFF
+  &__clans
+    display: flex
+    margin-top: 12px
+  &__clan
+    display: block
+    width: 24px
+    height: 24px
+    margin-left: 8px
     &:first-child
       margin-left: 0
-
-  &-clans
-    display: flex
-  &-clan
-    display: flex
-    flex: 0 1 auto
-    margin-left: 10px
-
-  &-num
-    height: 22px
-  &-ico
-    width: 22px
-    height: 22px
+  &__summary
+    font-size: 15px
+    line-height: 24px
+    color: #FFF
+    text-align: center
+    position: absolute
+    bottom: 0
+    left: 0
+    right: 0
