--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -32,3 +32,6 @@ $other_icons: action agenda alchemy attack blood bloodpotency bloodpotencyrequir
   .ui-icon_#{$icon}
     -webkit-mask-image: url("../../assets/icons/icon-#{$icon}.svg")
     mask-image: url("../../assets/icons/icon-#{$icon}.svg")
+
+.ui-icon--standard.ui-icon_bloodpotency
+  background-color: #AE2413
