--- a/client/src/_vars.sass
+++ b/client/src/_vars.sass
@@ -12,3 +12,9 @@ $z-deckindex-content: 3
 $z-card-name-image: 10
 $z-modal-wrapper: 20
 $z-modal-content: 30
+
+$font-size--header: 28px
+$font-size--subheader: 21px
+$font-size--sectionheader: 18px
+$font-size--body: 15px
+$font-size--small: 12px
