--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -1,11 +1,11 @@
 body
-  --color-icon-standard: #000
   --font-size--header: 20px
   --font-size--default: 16px
   --font-size--small: 14px
   --font-size--micro: 12px
 
   --color-icon-negative: #FFF
+  --color-icon-standard: #E5D195
   --color-bg-farthest: rgba(15, 27, 38, 1)
   --color-bg-far: rgba(28, 51, 71, 1)
   --color-bg-close: rgba(38, 70, 97, 1)
