--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -37,6 +37,8 @@ $actions-bar-height: 60px
   &-filters,
   &-flaggroup
     display: inline-block
+  &-flaggroup
+    margin-bottom: 8px
   &-collectionitems--images
     margin: 0
     padding: 0
