--- a/client/src/Pages/Search.sass
+++ b/client/src/Pages/Search.sass
@@ -6,7 +6,10 @@
     overflow: hidden
 
   &-flaggroup
+    $margin: 8px
     flex: 0 0 max-content
+    margin-right: $margin
+    margin-bottom: $margin
 
   &-text
     margin-top: 10px
