--- a/client/src/UI/FilterSelection.sass
+++ b/client/src/UI/FilterSelection.sass
@@ -1,33 +1,34 @@
-.fltrslct
-  margin: 5px
+.filterpicker
   display: flex
   flex-wrap: wrap
 
-  &-option
-    $iconSize: 30px
+  $optionInner: 32px
 
+  &__option
     display: inline-block
-    height: $iconSize
-    width: $iconSize
-    padding: 5px
-    box-shadow: inset 0 0 2px var(--color-bg)
+    padding: 2px
+    height: $optionInner
+    width: $optionInner
     cursor: pointer
     text-align: center
-    background: var(--color-greylight)
-    input
-      display: none
-    &--actv
-      background: var(--color-greydeep)
+    background: var(--color-bg-farthest)
 
-  &-icon
-    height: 100%
-    width: 100%
+    &--active
+      background: var(--color-bg-closest)
+
+  &__checkbox
+    display: none
+
+  &__box
+    $padding: 4px
+    $size: $optionInner - (2 * $padding)
+    height: $size
+    width: $size
+    padding: $padding
     display: flex
     justify-content: center
     align-items: center
-    font-size: 24px
-    line-height: 1
-  &-icon_wrapper
-    height: 100%
-    width: 100%
-    display: inline-block
+    background: var(--color-bg-closest)
+
+    &--active
+      background: var(--color-bg-farthest)
