--- a/client/src/Pages/Search.sass
+++ b/client/src/Pages/Search.sass
@@ -4,6 +4,7 @@
     flex-wrap: wrap
     max-width: 840px
     overflow: hidden
+    margin-top: 12px
 
   &-flaggroup
     $margin: 8px
@@ -14,21 +15,19 @@
   &-text
     margin-top: 10px
 
-.search-results
-  display: grid
-  gap: 12px 16px
-  place-items: start center
-  grid-template-columns: repeat(1, 1fr)
-  @media screen and ( min-width: 516px)
-    grid-template-columns: repeat(2, 1fr)
-  @media screen and ( min-width: 710px)
-    grid-template-columns: repeat(3, 1fr)
-  @media screen and ( min-width: 945px)
-    grid-template-columns: repeat(4, 1fr)
-  @media screen and ( min-width: 1200px)
-    grid-template-columns: repeat(5, 1fr)
-  @media screen and ( min-width: 1600px)
-    grid-template-columns: repeat(6, 1fr)
+.searchresults
+  margin-top: 12px
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-between
+  align-items: flex-start
+  gap: 16px
+  &__result
+    display: flex
+    justify-content: center
 
-.search-result
-  cursor: pointer
+.searchpage
+  &__filters
+    margin-top: 24px
+  &__results
+    margin-top: 24px
