--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -6,6 +6,8 @@ body
 
   --color-icon-negative: #FFF
   --color-icon-standard: #E5D195
+  --color-bg-modalcover: rgba(15, 27, 38, 0.8)
+  --color-bg-modalshadow: rgba(0, 0, 0, 0.9)
   --color-bg-farthest: rgba(15, 27, 38, 1)
   --color-bg-far: rgba(28, 51, 71, 1)
   --color-bg-close: rgba(38, 70, 97, 1)
@@ -14,12 +16,13 @@ body
   --color-link: rgba(87, 189, 37, 1)
   --color-footer-text: rgba(36,106,120,1)
   --color-header-logo: rgba(37,163,189,1)
+  --color-cancel: #BD3E25
 
 body
   background: var(--color-bg-far)
   color: var(--color-copy-medium)
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"
-  font-size: 15px
+  font-size: var(--font-size--default)
   line-height: 24px
   margin: 0
 
