--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -13,10 +13,18 @@ body
   --color-bg-close: rgba(38, 70, 97, 1)
   --color-bg-closest: rgba(47, 86, 120, 1)
   --color-copy-medium: rgba(229, 209, 149, 1)
+  --color-copy-highlight: #F5EDD6
   --color-link: rgba(87, 189, 37, 1)
   --color-footer-text: rgba(36,106,120,1)
   --color-header-logo: rgba(37,163,189,1)
+  --color-divider: rgba(37,163,189, 0.2)
   --color-cancel: #BD3E25
+  --color-blood: #AD231F
+  --color-bloodreq: #5C6D70
+  --color-physical: #2959A3
+  --color-social: #A33829
+  --color-mental: #A37A29
+  --color-ranged: #8FA0A3
 
 body
   background: var(--color-bg-far)
