--- a/client/src/Pages/Build.sass
+++ b/client/src/Pages/Build.sass
@@ -57,17 +57,6 @@ $actions-bar-height: 60px
   &-rowpiece_quant--image
     text-align: center
 
-  &-collectionitem--row
-    list-style: none
-    font-size: 16px
-    line-height: 24px
-    padding: 5px 0
-    border-top: 1px solid #CCC
-    display: flex
-    flex-wrap: nowrap
-    &:first-child
-      border-top: none
-
   &-collectionitems--rows
     margin: 0
     padding: 0
@@ -75,44 +64,24 @@ $actions-bar-height: 60px
   &-rowpiece_quant--row
     flex: 0 0 auto
 
-  &-rowpiece_name
-    margin-left: 10px
-    flex: 1 1 auto
   &-rowpiece_props
     margin-left: 10px
     flex: 0 0 auto
     display: flex
     align-items: center
     height: 32px
+    gap: 0 4px
 
-  &-rowpiece_clan,
-  &-rowpiece_disciplines,
-  &-rowpiece_discipline,
-  &-rowpiece_bp
-    display: inline-block
-  &-rowpiece_physical,
-  &-rowpiece_social,
-  &-rowpiece_mental,
-  &-rowpiece_damage,
-  &-rowpiece_shields,
-  &-rowpiece_types,
   &-rowpiece_type
     display: none
     @media screen and ( min-width: $breakpoint-ipad--horizontal)
       &
         display: inline-block
 
-  &-rowpiece_clan
-    $size: 18px
-    margin-left: 10px
-    width: $size
-    height: $size
-  &-rowpiece_disciplines,
   &-rowpiece_types
     width: 60px
     height: 18px
-    margin-left: 5px
-  &-rowpiece_discipline,
+    margin-left: 4px
   &-rowpiece_type
     $size: 18px
     margin-left: 3px
@@ -164,7 +133,7 @@ $actions-bar-height: 60px
     flex: 0 0 auto
   &-action
     cursor: pointer
-    color: var(--color-redmedium)
+    color: var(--color-link)
     text-decoration: underline
     user-select: none
   &-primary
@@ -174,30 +143,72 @@ $actions-bar-height: 60px
     margin: 0
     flex: 0 0 auto
 
+.cardlist
+  &__row
+    padding: 4px 0
+    border-top: 1px solid var(--color-divider)
+    display: flex
+    flex-wrap: nowrap
+    gap: 0 12px
+    &:first-child
+      border-top: none
+
+  &__quant--row
+    flex: 0 0 auto
+
+  &__name
+    flex: 1 1 auto
+
+  &__props
+    flex: 0 0 auto
+    display: flex
+    align-items: center
+    height: 32px
+    gap: 0 4px
+
+  &__clan
+    $size: 21px
+    width: $size
+    height: $size
+
+  &__extra-prop
+    display: none
+    @media screen and ( min-width: $breakpoint-ipad--horizontal)
+      &
+        display: inline-block
+
+.char-icons-list
+  $gap: 3px
+  $itemSize: 20px
+  display: flex
+  gap: $gap
+  width: (3 * $itemSize) + (2 * $gap)
+  &__item
+    display: inline-block
+    width: $itemSize
+    height: $itemSize
+
 .quantpick
   $optHeight: 32px
   $optWidth: 20px
   display: inline-block
 
-  &--1
-    width: 2 * $optWidth
-  &--3
-    width: 4 * $optWidth
-
-  &-option
+  &__option
     display: inline-block
     width: $optWidth
     height: $optHeight
     line-height: $optHeight
     text-align: center
     cursor: pointer
-    font-size: 18px
-    background: var(--color-greylight)
-    box-shadow: inset 0 0 2px var(--color-text)
+    font-size: var(--font-size--default)
+    background: var(--color-bg-closest)
+    box-shadow: inset 0 0 2px var(--color-bg-farthest)
 
     &--active
-      background: var(--color-greydeep)
+      background: var(--color-bg-farthest)
+      box-shadow: inset 0 0 2px var(--color-bg-closest)
+      color: var(--color-copy-highlight)
       font-weight: bold
 
-    input
-      display: none
+  &__radio
+    display: none
