--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -1,13 +1,13 @@
 @import ./base.sass
 @import ./Pages/About.sass
 @import ./Pages/Build.sass
-@import ./Pages/Decks.sass
 @import ./Pages/Profile.sass
 @import ./Pages/Search.sass
 @import ./UI/Attribute.sass
 @import ./UI/Card.sass
 @import ./UI/CardName.sass
 @import ./UI/Decklist.sass
+@import ./UI/DecklistsIndex.sass
 @import ./UI/FilterSelection.sass
 @import ./UI/Icon.sass
 @import ./UI/Layout/Header.sass
