--- a/client/src/_vars.sass
+++ b/client/src/_vars.sass
@@ -6,6 +6,7 @@ $safearea-margin: 16px
 
 $round-border: 3px
 
+$z-deckbuilder-actions: 1
 $z-deckindex-illustration: 1
 $z-deckindex-illustration-overlay: 2
 $z-deckindex-content: 3
@@ -18,3 +19,10 @@ $font-size--subheader: 21px
 $font-size--sectionheader: 18px
 $font-size--body: 15px
 $font-size--small: 12px
+
+$space-nano: 4px
+$space-micro: 8px
+$space-small: 12px
+$space-medium: 16px
+$space-large: 24px
+$space-huge: 32px
