--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -1,15 +1,16 @@
 @import ./base.sass
 @import ./Pages/About.sass
-@import ./Pages/Build.sass
 @import ./Pages/Profile.sass
 @import ./Pages/Search.sass
 @import ./UI/Attribute.sass
 @import ./UI/Card.sass
 @import ./UI/CardName.sass
+@import ./UI/DeckbuildSelections.sass
 @import ./UI/Decklist.sass
 @import ./UI/DecklistsIndex.sass
 @import ./UI/FilterSelection.sass
 @import ./UI/Icon.sass
+@import ./UI/Layout/Deck.sass
 @import ./UI/Layout/Header.sass
 @import ./UI/Layout/Modal.sass
 @import ./UI/Layout/Template.sass
